--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: suma_jaya_anugerah
-description: "A new Flutter project."
+description: "Point of Sales for PT. Suma Jaya Anugerah"
 publish_to: 'none'
 version: 0.1.0
 
@@ -9,9 +9,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
   flutter_svg: ^2.0.9
   image_picker: ^1.0.7
   intl: ^0.19.0
+
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app-icon.png"
 
 dev_dependencies:
   flutter_lints: ^2.0.0
